[package]
name = "secret-sharing-cli"
version = "0.1.2"
authors = ["DCsunset <dcsunset@protonmail.com>"]
edition = "2018"
description = "A secret sharing command line tool using Shamir's Secret Sharing"
readme = "README.md"
repository = "https://github.com/DCsunset/secret-sharing-cli"
license = "GPL-3.0"
categories = ["command-line-utilities", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharks = "0.4"
base64 = "0.12"
clap = "^2.33.1"
